[feature/jacoco] jacoco lauffähig
Signed-off-by: Huluvu424242 alias Thomas Schubert <huluvu424242@gmail.com>